tests/test_exception/good/split_unlabeled_exception.catala
## [Test]

```catala
new scope A:
  param x content int

scope A:
  def x := 0
```

```catala
scope A:
  exception
  def x := 1
```
