tests/test_exception/bad/missing_unlabeled_definition.catala
## [Test]

```catala
new scope A:
  param x content int

scope A:
  exception
  def x := 1
```
